@@ -1,5 +1,9 @@
 2017-09-05  Charlie Zender  <zender@uci.edu>
 
+	* NCO 4.6.9-alpha03 release procedure:
+	cd ~/nco;git commit -a -m 'Version 4.6.9-alpha03 final changes';git push
+	git tag -a 4.6.9-alpha03 -m 'CMake implementation;data size estimates with ncks -D 2;--lst_xtr';git push --tags
+
 	* Add CDF5 presence to ncks -r report
 
 	* Refine CMake templates
